<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grisfondo"
    tools:context=".rutinasDisponibles">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="145dp"
        android:background="@drawable/rec" />

    <Button
        android:id="@+id/btRegresar"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="54dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="17dp"
        android:backgroundTint="#FFFFFF"
        android:fontFamily="@font/roboto"
        android:textAlignment="textStart"
        android:textColor="@color/blanco"
        android:textSize="18sp"
        android:textStyle="normal"
        app:icon="@drawable/flecha"
        app:iconTint="@color/blanco" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rdTitulo"
        android:textSize="45sp"
        android:fontFamily="@font/roboto_medium"
        android:textColor="@color/blanco"
        android:layout_marginTop="70dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="145dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true">

            <RelativeLayout
                android:id="@+id/layoutZonasImagen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:background="@drawable/style_txt">

                <TextView
                    android:id="@+id/txtPB"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_medium"
                    android:text="@string/rdSubTitulo"
                    android:textColor="@color/azulMarino"
                    android:textSize="28dp"
                    android:textAlignment="center"
                    android:layout_marginTop="16dp"/>

                <TextView
                    android:id="@+id/txtlineaZEinicio"
                    android:layout_below="@+id/txtPB"
                    android:layout_width="348dp"
                    android:layout_height="3dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:background="@color/azulMarino" />

                <TextView
                    android:id="@+id/txtDescripcion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto"
                    android:textColor="@color/negro"
                    android:text="@string/rdDescripcion"
                    android:textSize="20dp"
                    android:textAlignment="textStart"
                    android:layout_marginTop="16dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_below="@+id/txtlineaZEinicio"/>

                <TextView
                    android:id="@+id/txtImgPB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="42dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/pb"
                    android:layout_below="@+id/txtDescripcion"/>

                <TextView
                    android:id="@+id/txtDescripcion1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto"
                    android:textColor="@color/negro"
                    android:text="@string/rdDescripcion1"
                    android:textSize="20dp"
                    android:textAlignment="textStart"
                    android:layout_marginTop="16dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_below="@id/txtImgPB"/>

                <Button
                    android:id="@+id/btnRC"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/style_buttons"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@+id/txtDescripcion1"
                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:textSize="18dp"
                    android:text="@string/rutC"
                    android:fontFamily="@font/roboto_medium"
                    android:textColor="@color/blanco"
                    />

                <Button
                    android:id="@+id/btnRZ"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/style_buttons"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@+id/btnRC"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginLeft="20dp"
                    android:textSize="18dp"
                    android:text="@string/rutZ"
                    android:fontFamily="@font/roboto_medium"
                    android:textColor="@color/blanco"
                    />

                <TextView
                    android:id="@+id/txtlineaRLCF"
                    android:layout_width="348dp"
                    android:layout_height="3dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginBottom="16dp"
                    android:background="@color/azulMarino"
                    android:layout_below="@id/btnRZ"/>

            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/fin"
                android:layout_marginTop="20dp"
                android:layout_below="@+id/layoutZonasImagen"
                />

        </RelativeLayout>
    </ScrollView>

</RelativeLayout>



